--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.6",
     "express": "^4.18.2",
+    "pearson-sy-s": "file:",
+    "prim": "^1.0.0",
+    "primeng": "^17.18.10",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
