--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.6",
+    "@fortawesome/angular-fontawesome": "^0.15.0",
     "express": "^4.18.2",
     "pearson-sy-s": "file:",
     "prim": "^1.0.0",
