--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.6",
     "@fortawesome/angular-fontawesome": "^0.15.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "express": "^4.18.2",
     "pearson-sy-s": "file:",
     "prim": "^1.0.0",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
     "primeng": "^17.18.10",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
