--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.6",
+    "@asymmetrik/ngx-leaflet": "^18.0.1",
     "@fortawesome/angular-fontawesome": "^0.15.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "express": "^4.18.2",
+    "leaflet": "^1.9.4",
+    "leaflet-geosearch": "^4.0.0",
     "pearson-sy-s": "file:",
     "prim": "^1.0.0",
     "primeflex": "^3.3.1",
@@ -41,6 +44,7 @@
     "@angular/compiler-cli": "^18.0.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
