--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,8 @@
               "node_modules/primeng/resources/themes/saga-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "./node_modules/ol/ol.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -113,6 +114,7 @@
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css",
               "src/styles.scss"
+
             ],
             "scripts": []
           }
