--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "^4.0.2",
     "karma-jasmine-html-reporter": "^1.7.0",
+    "source-map-explorer": "^2.5.3",
     "typescript": "~5.4.2"
   }
 }
